Logica aggiornata con javafx